<resources>
    <string name="app_name">BaseDroidXML</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="login_title">Welcome</string>
    <string name="login_subtitle">Login to continue</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_pass">Enter your password</string>
    <string name="enter_conf_pass">Confirm Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="error_name">Enter your name</string>
    <string name="error_event_image">Please Select event Photo</string>
    <string name="error_email">Enter your email</string>
    <string name="error_mobile">Enter your mobile number</string>
    <string name="error_valid_phone">Mobile number must be between 10 to 15 digits</string>
    <string name="error_valid_password">Password must be 8 characters long with at least one uppercase letter, one special character and one number</string>
    <string name="error_valid_email">Enter your valid email</string>
    <string name="error_password_match">Both password doesn\'t match</string>
    <string name="error_family_member_name">Enter family member name</string>
    <string name="error_family_member_email">Enter family member email</string>
    <string name="error_family_member_mobile_number">Enter family member mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>

    <string name="family_member_name">Family member name</string>
    <string name="family_member_email">Family member email</string>
    <string name="family_member_mobile_number">Family member mobile number</string>

    <string name="social_media_login">Social Media Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="error_password">Enter your password</string>

    <string name="submit">Submit</string>
    <string name="forgotpasswordsecond">Please enter your email below to receive your password reset instruction.</string>

    <string name="enable_gps_title">GPS is disabled</string>
    <string name="enable_gps">Show location settings?</string>

    <!--    Signup-->
    <string name="signup">Sign Up</string>
    <string name="create_account">Create new account</string>
    <string name="name">Name</string>
    <string name="i_accept">I accept <font color="#0076EB">Terms &amp; Conditions</font></string>
    <string name="already_have_account">Already have an account?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="error_accept_tnc">Please accept terms and conditions</string>


    <!--    Dashboard-->
    <string name="message">Message</string>

    <!--    Error-->
    <string name="exit_msg">Press again to exit</string>
    <string name="no_member">No members available</string>
    <string name="no_group">No groups available</string>
    <string name="no_events">Add events of your family on the Family Table.</string>
    <string name="no_invitation">No invitation available</string>
    <string name="no_message">No message available</string>
    <string name="no_notification">No notifications</string>
    <string name="no_photo_video">Add Photo and Video of your family on the Family Table.</string>


    <!--    Change Password-->
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

    <string name="error_confirm_password">Enter your confirm password</string>
    <string name="error_new_password">Enter your new password</string>
    <string name="error_new_confirm_password">Please enter confirm new password</string>
    <string name="error_current_password">Enter your current password</string>
    <string name="error_phone">Enter your mobile number</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile_success">Profile updated successfully</string>


    <!-- ADD Photo Video  -->
    <string name="photo_add_success">Photo uploaded successfully</string>
    <string name="video_add_success">Video uploaded successfully</string>
    <string name="delete_media_success">Media deleted successfully</string>
    <string name="delete_media_msg">Are you sure you want to delete?</string>
    <string name="delete_photo_msg">Are you sure you want to delete this photo?</string>
    <string name="delete_video_msg">Are you sure you want to delete this video?</string>
    <string name="delete_account_msg">Are you sure you want to delete this account?</string>

    <!--Accept & Terms Condition-->

    <string name="accept_and_login">Accept and Login</string>
    <string name="terms_condition">Terms &amp; Condition</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Accept\n</string>
    <string name="re_enter_pass">Re-enter your password</string>
    <string name="enter_your_new_pass">Enter your new password\n</string>
    <string name="enter_your_current_pass">Enter your current password\n</string>
    <string name="image_view_content_description">Image View</string>
    <string name="dot_image_view">Dot image view</string>
    <string name="leave">Leave</string>
    <string name="country_code_picker">country code picker</string>
</resources>