<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/margin_14"
    android:paddingVertical="@dimen/margin_15">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCloseIcon"
        android:layout_width="@dimen/margin_34"
        android:layout_height="@dimen/margin_34"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDalAcceptTitle"
        style="@style/text_field_title_reg_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/accept"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCloseIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDalTermsConditionTitle"
        style="@style/text_field_title_reg_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:text="@string/terms_condition"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDalAcceptTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPositiveButton"

        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/accept_and_login"
        android:textSize="@dimen/font_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDalTermsConditionTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>