<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scree_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.basedroidxml.utils.StatusBarView
            android:id="@+id/statusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/toolbar_app"
            layout="@layout/toolbar_common"
            app:layout_constraintTop_toBottomOf="@+id/statusView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llHeader"
        android:layout_marginTop="@dimen/margin_25"
        android:overScrollMode="never"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_40"
            android:paddingBottom="@dimen/margin_30">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avgardm_2"
                    android:gravity="center|start"
                    app:layout_constraintTop_toTopOf="@id/layoutToolbar"
                    android:text="@string/forgot"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/font_30" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSign"
                style="@style/text_field_title_reg_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_9"
                android:text="@string/forgotpasswordsecond"
                android:textColor="@color/hint_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutToolbar" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_48"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSign">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_field_title_reg_14"
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/layoutFieldEmail"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/email"
                    android:textColor="@color/colorGrey" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUserEmail"
                    style="@style/styleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_marginTop="@dimen/margin_3"
                    app:layout_constraintTop_toBottomOf="@id/emailText"
                    android:hint="@string/enter_your_email"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorGrey" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_1"
                    app:layout_constraintTop_toBottomOf="@id/etUserEmail"
                    android:background="@color/colorGreyLight" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_marginTop="@dimen/margin_27"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutFieldEmail" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>