<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_5"
    android:paddingEnd="0dp"
    android:paddingTop="@dimen/margin_25">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_15"
        android:background="@null"
        android:paddingStart="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_15"
            android:paddingEnd="@dimen/margin_15">

            <LinearLayout
                android:id="@+id/layoutNormalTool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSideMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:paddingEnd="@dimen/margin_9"
                    android:src="@drawable/ic_menu"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:paddingEnd="@dimen/margin_9"
                    android:src="@drawable/ic_back"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/text_field_title_semi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/font_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/relativeNotification"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_view_content_description"
                        android:src="@drawable/ic_notification"
                        android:visibility="invisible" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivDot"
                        android:layout_width="@dimen/margin_12"
                        android:layout_height="@dimen/margin_12"
                        android:layout_marginTop="@dimen/margin_5"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_view_content_description"
                        android:src="@drawable/ic_circle"
                        android:visibility="gone"
                        app:tint="@color/dot_color" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/rlLeaveGroup"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="@dimen/margin_30">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/margin_30"
                        android:layout_height="@dimen/margin_30"
                        android:src="@drawable/ic_delete"
                        android:visibility="gone"
                        android:id="@+id/imgDeleteGroup"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLeaveGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leave"
                        android:textColor="@color/red"
                        android:fontFamily="@font/avgardm_2"
                        android:textSize="@dimen/font_12"
                        android:includeFontPadding="false"
                        android:background="@drawable/leave_group_bg"
                        android:visibility="gone"

                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/margin_4"
                        android:gravity="center"/>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
</LinearLayout>
